@@ -23,6 +23,8 @@
   Change the socket connection message to make it more obvious that it is just
   a socket connection being made (bug #801135).
 - Fix retained message delivery where a subscription contains a +.
+- Be more lenient when reloading persistent database to reduce errors with
+  empty retained messages.
 
 0.11.3 - 20110707
 =================
